--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "react-awesome-lightbox": "^1.7.3",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
+    "react-instagram-embed": "^2.0.0",
     "react-lightgallery": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll-up-button": "^1.6.4",
     "react-slick": "^0.27.13",
+    "react-xml-viewer": "^1.3.0",
     "rebuild-node-sass": "^1.1.0",
     "simple-react-lightbox": "^3.5.5",
     "slick-carousel": "^1.8.1",
